# JobNavigator

./: .gitignore  app.db  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 39850ec34b65_initial_migration.py
apps/api/src/: database.py  main.py
apps/api/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/core/: config.py  security.py
apps/api/src/models/: database_models.py  jobs.py  salary.py  user.py
apps/api/src/routers/: auth.py  jobs.py
apps/api/src/services/: CareerAIService.py
apps/api/tests/: conftest.py
apps/api/tests/mocks/: intermediate_ruby_developer.json  junior_javascript_engineer.json  junior_python_engineer.json
apps/api/tests/test_models/: jobs_test.py  salary_test.py
apps/api/tests/test_routers/: test_auth.py  test_jobs.py
apps/web/: .gitignore  middleware.ts  package.json  tsconfig.json
apps/web/app/components/: Input.tsx
apps/web/app/components/AccessForm/: AccessForm.tsx  LoginForm.tsx  RegisterForm.tsx
apps/web/src/app/: page.tsx  proxy.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/components/ui/: Input.tsx  JobCard.tsx  JobCreateForm.tsx  JobManager.tsx
apps/web/src/types/: jobs.ts
