[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-ai>=1.64.0",
    "pydantic-ai-slim[google]>=1.64.0",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.0.0",
    "google-cloud-aiplatform>=1.141.0",
    "sqlalchemy>=2.0.48",
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
]
dev = [
    "watchfiles>=0.23.0",
    "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

