[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.0.0",
    "google-cloud-aiplatform>=1.141.0",
    "bcrypt==4.3.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
]
